--- a/index.html
+++ b/index.html
@@ -42,16 +42,14 @@
 				<div class="main">
 					<header>
 						<div class="overlay">
-							<div class="brand">
+							<div class="brand slide-top">
 								<h1 class="brand__title">THE BRAND<span class="brand_subtitle">OF LUXERIOUS</span>
 									<span class="brand_subtitle-pink">FASHION</span>
 								</h1>
 							</div>
 						</div>
 					</header>
-
 				</div>
-
 				<div class="shadow one"></div>
 				<div class="shadow two"></div>
 			</div>
@@ -62,7 +60,7 @@
 						<a href="index.html" style="--i: 0.05s;">Home</a>
 					</li>
 					<li>
-						<a href="product.html" style="--i: 0.1s;">Product</a>
+						<a href="catalog.html" style="--i: 0.1s;">Product</a>
 					</li>
 					<li>
 						<a href="cart.html" style="--i: 0.15s;">Cart</a>
@@ -78,7 +76,7 @@
 					</li> -->
 				</ul>
 			</div>
-	</div>
+		</main>
 
 	<script src="./js/app.js"></script>
 </body>
