--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 
-	<link rel="stylesheet" href="./css/style.css">
+	<link rel="stylesheet" href="css/style.css">
 	<!-- <link rel="stylesheet" href="/libs/bootstrap/"> -->
 
 </head>
@@ -56,16 +56,16 @@
 
 			<div class="links">
 				<ul>
-					<li>
+					<li class="links__style">
 						<a href="index.html" style="--i: 0.05s;">Home</a>
 					</li>
-					<li>
-						<a href="catalog.html" style="--i: 0.1s;">Product</a>
+					<li class="links__style">
+						<a href="catalog.html" style="--i: 0.1s;">Catalog</a>
 					</li>
-					<li>
+					<li class="links__style">
 						<a href="cart.html" style="--i: 0.15s;">Cart</a>
 					</li>
-					<li>
+					<li class="links__style">
 						<a href="registration.html" style="--i: 0.2s;">Registration</a>
 					</li>
 					<li>
